// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conviction_v1 phase3 golden snapshots locks execution_ready_startup golden behavior: execution_ready_startup 1`] = `
{
  "confidence_0_1": 0.8382211538461537,
  "contradiction_index_0_1": 0,
  "contradictions": [],
  "conviction_band": "fund_confident",
  "conviction_score_0_100": 95,
  "coverage_ratio_0_1": 0.9706036745406823,
  "inputs": {
    "capital_structure": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "doc-deck:page_index:5",
      ],
      "family": "capital_structure",
      "notes": [],
      "signal_strength": 1,
      "source": "capital_logic_v1",
      "source_priority": 2,
      "status": "confirmed",
    },
    "contradictions": {
      "confidence": 0.8,
      "coverage": 0.2,
      "evidence_refs": [],
      "family": "contradictions",
      "notes": [],
      "signal_strength": 0,
      "source": "conviction_v1.contradictions",
      "source_priority": 3,
      "status": "probable",
    },
    "coverage": {
      "confidence": 0.81,
      "coverage": 0.84,
      "evidence_refs": [
        "doc-fin:page_index:2",
        "doc-fin:page_index:3",
      ],
      "family": "coverage",
      "notes": [
        "coverage_ratio=0.840",
      ],
      "signal_strength": 0.84,
      "source": "score_explanation.totals",
      "source_priority": 3,
      "status": "confirmed",
    },
    "evidence_quality": {
      "confidence": 0.81,
      "coverage": 0.84,
      "evidence_refs": [],
      "family": "evidence_quality",
      "notes": [
        "confidence_score=0.820",
        "evidence_factor=0.800",
      ],
      "signal_strength": 0.81,
      "source": "score_explanation.totals",
      "source_priority": 3,
      "status": "confirmed",
    },
    "external_corroboration": {
      "confidence": 0.5,
      "coverage": 0.2,
      "evidence_refs": [],
      "family": "external_corroboration",
      "notes": [
        "reserved_for_future_external_signal_integration",
      ],
      "signal_strength": 0.5,
      "source": "not_available_phase1",
      "source_priority": 5,
      "status": "unknown",
    },
    "financial_truth": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "doc-fin:page_index:2",
        "doc-fin:page_index:3",
      ],
      "family": "financial_truth",
      "notes": [],
      "signal_strength": 0.85,
      "source": "xlsx",
      "source_priority": 1,
      "status": "confirmed",
    },
    "market_demand": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "ev-slide",
      ],
      "family": "market_demand",
      "notes": [],
      "signal_strength": 1,
      "source": "market_accessibility_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
    "product_or_asset_quality": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "ev-arc",
      ],
      "family": "product_or_asset_quality",
      "notes": [],
      "signal_strength": 1,
      "source": "business_model_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
    "risk_dependencies": {
      "confidence": 0.8,
      "coverage": 0.8,
      "evidence_refs": [
        "ev-risk",
      ],
      "family": "risk_dependencies",
      "notes": [],
      "signal_strength": 0,
      "source": "score_explanation.components.risk_assessment",
      "source_priority": 3,
      "status": "confirmed",
    },
    "team_execution": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [],
      "family": "team_execution",
      "notes": [
        "exec_depth",
      ],
      "signal_strength": 1,
      "source": "team_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
    "traction_validation": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "ev-metric",
      ],
      "family": "traction_validation",
      "notes": [],
      "signal_strength": 1,
      "source": "traction_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
  },
  "lineage": {
    "generated_at": "<generated_at>",
    "mapping_version": "phase2_deterministic_v1",
    "source_artifacts": [
      {
        "artifact": "financial_coverage_v1",
        "note": "phase2 primary financial truth and coverage input",
        "path": "report.financial_coverage_v1",
        "used": true,
      },
      {
        "artifact": "capital_logic_v1",
        "note": "phase2 primary capital-structure input",
        "path": "report.capital_logic_v1",
        "used": true,
      },
      {
        "artifact": "business_model_signal_v1",
        "note": "phase2 primary product/asset quality input",
        "path": "report.business_model_signal_v1",
        "used": true,
      },
      {
        "artifact": "market_accessibility_signal_v1",
        "note": "phase2 primary market-demand input",
        "path": "report.market_accessibility_signal_v1",
        "used": true,
      },
      {
        "artifact": "traction_signal_v1",
        "note": "phase2 primary traction-validation input",
        "path": "report.traction_signal_v1",
        "used": true,
      },
      {
        "artifact": "team_signal_v1",
        "note": "phase2 primary team-execution input",
        "path": "report.team_signal_v1",
        "used": true,
      },
      {
        "artifact": "funding_stage_v1",
        "note": "phase2 stage-aware weighting input",
        "path": "report.funding_stage_v1",
        "used": true,
      },
      {
        "artifact": "score_explanation",
        "note": "phase2 secondary deterministic compatibility input (evidence quality + contradictions), not conviction source of truth",
        "path": "metadata.score_explanation",
        "used": true,
      },
      {
        "artifact": "recommendation",
        "note": "compatibility surface only; conviction posture is computed natively",
        "path": "report.recommendation",
        "used": true,
      },
      {
        "artifact": "overall_score",
        "note": "compatibility surface only; not used as native conviction score passthrough",
        "path": "report.overallScore",
        "used": true,
      },
      {
        "artifact": "financial_breakdown_v1",
        "path": "report.financial_breakdown_v1",
        "used": true,
      },
    ],
  },
  "recommendation_posture": "strong_yes",
  "required_next_checks": [
    {
      "evidence_refs": [],
      "expected_direction": "clarify",
      "text": "Provide deterministic evidence for external_corroboration.",
    },
  ],
  "schema_version": "conviction_v1",
  "selected_policy_id": "execution_ready_v1",
  "summary": {
    "headline": "Conviction 95/100 (Fund (High Confidence))",
    "notes": [
      "phase2_native_deterministic_conviction",
      "policy=execution_ready_v1",
      "stage=series_a",
      "policy_label=Execution-Ready (Pre-Revenue)",
    ],
    "provisional": false,
    "rationale": "Primary deterministic support is led by Team Execution, Product/Asset Quality, Capital Structure.",
  },
  "top_negative_contributors": [
    {
      "evidence_refs": [],
      "key": "external_corroboration",
      "label": "External Corroboration",
      "notes": [
        "reserved_for_future_external_signal_integration",
      ],
      "score_delta_0_100": -0.2,
    },
  ],
  "top_positive_contributors": [
    {
      "evidence_refs": [],
      "key": "team_execution",
      "label": "Team Execution",
      "notes": [
        "exec_depth",
      ],
      "score_delta_0_100": 5.6,
    },
    {
      "evidence_refs": [
        "ev-arc",
      ],
      "key": "product_or_asset_quality",
      "label": "Product/Asset Quality",
      "notes": [],
      "score_delta_0_100": 5.4,
    },
    {
      "evidence_refs": [
        "doc-deck:page_index:5",
      ],
      "key": "capital_structure",
      "label": "Capital Structure",
      "notes": [],
      "score_delta_0_100": 4.8,
    },
  ],
  "unknowns": [
    {
      "code": "unknown_external_corroboration",
      "evidence_refs": [],
      "text": "External Corroboration is currently unknown and needs additional deterministic evidence.",
    },
  ],
}
`;

exports[`conviction_v1 phase3 golden snapshots locks real_estate_preferred_equity golden behavior: real_estate_preferred_equity 1`] = `
{
  "confidence_0_1": 0.8373713751169316,
  "contradiction_index_0_1": 0,
  "contradictions": [],
  "conviction_band": "fund_confident",
  "conviction_score_0_100": 94,
  "coverage_ratio_0_1": 0.9707266074228958,
  "inputs": {
    "capital_structure": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "doc-deck:page_index:5",
      ],
      "family": "capital_structure",
      "notes": [],
      "signal_strength": 1,
      "source": "capital_logic_v1",
      "source_priority": 2,
      "status": "confirmed",
    },
    "contradictions": {
      "confidence": 0.8,
      "coverage": 0.2,
      "evidence_refs": [],
      "family": "contradictions",
      "notes": [],
      "signal_strength": 0,
      "source": "conviction_v1.contradictions",
      "source_priority": 3,
      "status": "probable",
    },
    "coverage": {
      "confidence": 0.81,
      "coverage": 0.84,
      "evidence_refs": [
        "doc-fin:page_index:2",
        "doc-fin:page_index:3",
      ],
      "family": "coverage",
      "notes": [
        "coverage_ratio=0.840",
      ],
      "signal_strength": 0.84,
      "source": "score_explanation.totals",
      "source_priority": 3,
      "status": "confirmed",
    },
    "evidence_quality": {
      "confidence": 0.81,
      "coverage": 0.84,
      "evidence_refs": [],
      "family": "evidence_quality",
      "notes": [
        "confidence_score=0.820",
        "evidence_factor=0.800",
      ],
      "signal_strength": 0.81,
      "source": "score_explanation.totals",
      "source_priority": 3,
      "status": "confirmed",
    },
    "external_corroboration": {
      "confidence": 0.5,
      "coverage": 0.2,
      "evidence_refs": [],
      "family": "external_corroboration",
      "notes": [
        "reserved_for_future_external_signal_integration",
      ],
      "signal_strength": 0.5,
      "source": "not_available_phase1",
      "source_priority": 5,
      "status": "unknown",
    },
    "financial_truth": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "doc-fin:page_index:2",
        "doc-fin:page_index:3",
      ],
      "family": "financial_truth",
      "notes": [],
      "signal_strength": 0.85,
      "source": "xlsx",
      "source_priority": 1,
      "status": "confirmed",
    },
    "market_demand": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "ev-slide",
      ],
      "family": "market_demand",
      "notes": [],
      "signal_strength": 1,
      "source": "market_accessibility_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
    "product_or_asset_quality": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "ev-arc",
      ],
      "family": "product_or_asset_quality",
      "notes": [],
      "signal_strength": 1,
      "source": "business_model_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
    "risk_dependencies": {
      "confidence": 0.8,
      "coverage": 0.8,
      "evidence_refs": [
        "ev-risk",
      ],
      "family": "risk_dependencies",
      "notes": [],
      "signal_strength": 0,
      "source": "score_explanation.components.risk_assessment",
      "source_priority": 3,
      "status": "confirmed",
    },
    "team_execution": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [],
      "family": "team_execution",
      "notes": [
        "balanced_team",
      ],
      "signal_strength": 1,
      "source": "team_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
    "traction_validation": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "ev-metric",
      ],
      "family": "traction_validation",
      "notes": [],
      "signal_strength": 1,
      "source": "traction_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
  },
  "lineage": {
    "generated_at": "<generated_at>",
    "mapping_version": "phase2_deterministic_v1",
    "source_artifacts": [
      {
        "artifact": "financial_coverage_v1",
        "note": "phase2 primary financial truth and coverage input",
        "path": "report.financial_coverage_v1",
        "used": true,
      },
      {
        "artifact": "capital_logic_v1",
        "note": "phase2 primary capital-structure input",
        "path": "report.capital_logic_v1",
        "used": true,
      },
      {
        "artifact": "business_model_signal_v1",
        "note": "phase2 primary product/asset quality input",
        "path": "report.business_model_signal_v1",
        "used": true,
      },
      {
        "artifact": "market_accessibility_signal_v1",
        "note": "phase2 primary market-demand input",
        "path": "report.market_accessibility_signal_v1",
        "used": true,
      },
      {
        "artifact": "traction_signal_v1",
        "note": "phase2 primary traction-validation input",
        "path": "report.traction_signal_v1",
        "used": true,
      },
      {
        "artifact": "team_signal_v1",
        "note": "phase2 primary team-execution input",
        "path": "report.team_signal_v1",
        "used": true,
      },
      {
        "artifact": "funding_stage_v1",
        "note": "phase2 stage-aware weighting input",
        "path": "report.funding_stage_v1",
        "used": true,
      },
      {
        "artifact": "score_explanation",
        "note": "phase2 secondary deterministic compatibility input (evidence quality + contradictions), not conviction source of truth",
        "path": "metadata.score_explanation",
        "used": true,
      },
      {
        "artifact": "recommendation",
        "note": "compatibility surface only; conviction posture is computed natively",
        "path": "report.recommendation",
        "used": true,
      },
      {
        "artifact": "overall_score",
        "note": "compatibility surface only; not used as native conviction score passthrough",
        "path": "report.overallScore",
        "used": true,
      },
      {
        "artifact": "financial_breakdown_v1",
        "path": "report.financial_breakdown_v1",
        "used": true,
      },
    ],
  },
  "recommendation_posture": "strong_yes",
  "required_next_checks": [
    {
      "evidence_refs": [],
      "expected_direction": "clarify",
      "text": "Provide deterministic evidence for external_corroboration.",
    },
  ],
  "schema_version": "conviction_v1",
  "selected_policy_id": "real_estate_underwriting",
  "summary": {
    "headline": "Conviction 94/100 (Fund (High Confidence))",
    "notes": [
      "phase2_native_deterministic_conviction",
      "policy=real_estate_underwriting",
      "stage=growth",
      "policy_label=Real Estate Underwriting",
    ],
    "provisional": false,
    "rationale": "Primary deterministic support is led by Financial Truth, Capital Structure, Market Demand.",
  },
  "top_negative_contributors": [
    {
      "evidence_refs": [],
      "key": "external_corroboration",
      "label": "External Corroboration",
      "notes": [
        "reserved_for_future_external_signal_integration",
      ],
      "score_delta_0_100": -0.2,
    },
  ],
  "top_positive_contributors": [
    {
      "evidence_refs": [
        "doc-fin:page_index:2",
        "doc-fin:page_index:3",
      ],
      "key": "financial_truth",
      "label": "Financial Truth",
      "notes": [],
      "score_delta_0_100": 7.3,
    },
    {
      "evidence_refs": [
        "doc-deck:page_index:5",
      ],
      "key": "capital_structure",
      "label": "Capital Structure",
      "notes": [],
      "score_delta_0_100": 5.6,
    },
    {
      "evidence_refs": [
        "ev-slide",
      ],
      "key": "market_demand",
      "label": "Market Demand",
      "notes": [],
      "score_delta_0_100": 4.7,
    },
  ],
  "unknowns": [
    {
      "code": "unknown_external_corroboration",
      "evidence_refs": [],
      "text": "External Corroboration is currently unknown and needs additional deterministic evidence.",
    },
  ],
}
`;

exports[`conviction_v1 phase3 golden snapshots locks startup_raise golden behavior: startup_raise 1`] = `
{
  "confidence_0_1": 0.8397712274527058,
  "contradiction_index_0_1": 0,
  "contradictions": [],
  "conviction_band": "fund_confident",
  "conviction_score_0_100": 95,
  "coverage_ratio_0_1": 0.9736222326895903,
  "inputs": {
    "capital_structure": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "doc-deck:page_index:5",
      ],
      "family": "capital_structure",
      "notes": [],
      "signal_strength": 1,
      "source": "capital_logic_v1",
      "source_priority": 2,
      "status": "confirmed",
    },
    "contradictions": {
      "confidence": 0.8,
      "coverage": 0.2,
      "evidence_refs": [],
      "family": "contradictions",
      "notes": [],
      "signal_strength": 0,
      "source": "conviction_v1.contradictions",
      "source_priority": 3,
      "status": "probable",
    },
    "coverage": {
      "confidence": 0.81,
      "coverage": 0.84,
      "evidence_refs": [
        "doc-fin:page_index:2",
        "doc-fin:page_index:3",
      ],
      "family": "coverage",
      "notes": [
        "coverage_ratio=0.840",
      ],
      "signal_strength": 0.84,
      "source": "score_explanation.totals",
      "source_priority": 3,
      "status": "confirmed",
    },
    "evidence_quality": {
      "confidence": 0.81,
      "coverage": 0.84,
      "evidence_refs": [],
      "family": "evidence_quality",
      "notes": [
        "confidence_score=0.820",
        "evidence_factor=0.800",
      ],
      "signal_strength": 0.81,
      "source": "score_explanation.totals",
      "source_priority": 3,
      "status": "confirmed",
    },
    "external_corroboration": {
      "confidence": 0.5,
      "coverage": 0.2,
      "evidence_refs": [],
      "family": "external_corroboration",
      "notes": [
        "reserved_for_future_external_signal_integration",
      ],
      "signal_strength": 0.5,
      "source": "not_available_phase1",
      "source_priority": 5,
      "status": "unknown",
    },
    "financial_truth": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "doc-fin:page_index:2",
        "doc-fin:page_index:3",
      ],
      "family": "financial_truth",
      "notes": [],
      "signal_strength": 0.85,
      "source": "xlsx",
      "source_priority": 1,
      "status": "confirmed",
    },
    "market_demand": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "ev-slide",
      ],
      "family": "market_demand",
      "notes": [],
      "signal_strength": 1,
      "source": "market_accessibility_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
    "product_or_asset_quality": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "ev-arc",
      ],
      "family": "product_or_asset_quality",
      "notes": [],
      "signal_strength": 1,
      "source": "business_model_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
    "risk_dependencies": {
      "confidence": 0.8,
      "coverage": 0.8,
      "evidence_refs": [
        "ev-risk",
      ],
      "family": "risk_dependencies",
      "notes": [],
      "signal_strength": 0,
      "source": "score_explanation.components.risk_assessment",
      "source_priority": 3,
      "status": "confirmed",
    },
    "team_execution": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [],
      "family": "team_execution",
      "notes": [
        "balanced_team",
      ],
      "signal_strength": 1,
      "source": "team_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
    "traction_validation": {
      "confidence": 0.85,
      "coverage": 1,
      "evidence_refs": [
        "ev-metric",
      ],
      "family": "traction_validation",
      "notes": [],
      "signal_strength": 1,
      "source": "traction_signal_v1",
      "source_priority": 3,
      "status": "confirmed",
    },
  },
  "lineage": {
    "generated_at": "<generated_at>",
    "mapping_version": "phase2_deterministic_v1",
    "source_artifacts": [
      {
        "artifact": "financial_coverage_v1",
        "note": "phase2 primary financial truth and coverage input",
        "path": "report.financial_coverage_v1",
        "used": true,
      },
      {
        "artifact": "capital_logic_v1",
        "note": "phase2 primary capital-structure input",
        "path": "report.capital_logic_v1",
        "used": true,
      },
      {
        "artifact": "business_model_signal_v1",
        "note": "phase2 primary product/asset quality input",
        "path": "report.business_model_signal_v1",
        "used": true,
      },
      {
        "artifact": "market_accessibility_signal_v1",
        "note": "phase2 primary market-demand input",
        "path": "report.market_accessibility_signal_v1",
        "used": true,
      },
      {
        "artifact": "traction_signal_v1",
        "note": "phase2 primary traction-validation input",
        "path": "report.traction_signal_v1",
        "used": true,
      },
      {
        "artifact": "team_signal_v1",
        "note": "phase2 primary team-execution input",
        "path": "report.team_signal_v1",
        "used": true,
      },
      {
        "artifact": "funding_stage_v1",
        "note": "phase2 stage-aware weighting input",
        "path": "report.funding_stage_v1",
        "used": true,
      },
      {
        "artifact": "score_explanation",
        "note": "phase2 secondary deterministic compatibility input (evidence quality + contradictions), not conviction source of truth",
        "path": "metadata.score_explanation",
        "used": true,
      },
      {
        "artifact": "recommendation",
        "note": "compatibility surface only; conviction posture is computed natively",
        "path": "report.recommendation",
        "used": true,
      },
      {
        "artifact": "overall_score",
        "note": "compatibility surface only; not used as native conviction score passthrough",
        "path": "report.overallScore",
        "used": true,
      },
      {
        "artifact": "financial_breakdown_v1",
        "path": "report.financial_breakdown_v1",
        "used": true,
      },
    ],
  },
  "recommendation_posture": "strong_yes",
  "required_next_checks": [
    {
      "evidence_refs": [],
      "expected_direction": "clarify",
      "text": "Provide deterministic evidence for external_corroboration.",
    },
  ],
  "schema_version": "conviction_v1",
  "selected_policy_id": "operating_startup_revenue_v1",
  "summary": {
    "headline": "Conviction 95/100 (Fund (High Confidence))",
    "notes": [
      "phase2_native_deterministic_conviction",
      "policy=operating_startup_revenue_v1",
      "stage=seed",
      "policy_label=Operating Startup (Revenue-Generating)",
    ],
    "provisional": false,
    "rationale": "Primary deterministic support is led by Traction Validation, Financial Truth, Market Demand.",
  },
  "top_negative_contributors": [
    {
      "evidence_refs": [],
      "key": "external_corroboration",
      "label": "External Corroboration",
      "notes": [
        "reserved_for_future_external_signal_integration",
      ],
      "score_delta_0_100": -0.2,
    },
  ],
  "top_positive_contributors": [
    {
      "evidence_refs": [
        "ev-metric",
      ],
      "key": "traction_validation",
      "label": "Traction Validation",
      "notes": [],
      "score_delta_0_100": 8.1,
    },
    {
      "evidence_refs": [
        "doc-fin:page_index:2",
        "doc-fin:page_index:3",
      ],
      "key": "financial_truth",
      "label": "Financial Truth",
      "notes": [],
      "score_delta_0_100": 4.7,
    },
    {
      "evidence_refs": [
        "ev-slide",
      ],
      "key": "market_demand",
      "label": "Market Demand",
      "notes": [],
      "score_delta_0_100": 4.3,
    },
  ],
  "unknowns": [
    {
      "code": "unknown_external_corroboration",
      "evidence_refs": [],
      "text": "External Corroboration is currently unknown and needs additional deterministic evidence.",
    },
  ],
}
`;
